--- a/EDICodeViewer/MainWindow.xaml
+++ b/EDICodeViewer/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="EDICodeViever" Height="350" Width="694">
-    <Grid Background="#FF00003E">
+    <Grid Background="#FF2E2E2E">
         <Grid.RowDefinitions>
             <RowDefinition Height="38" />
             <RowDefinition Height="273*" />
@@ -11,108 +11,53 @@
             <ColumnDefinition Width="495*" />
             <ColumnDefinition Width="177" />
         </Grid.ColumnDefinitions>
-        <TextBox Margin="12,12,10,3" Name="tbxIn" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.961" />
-                    <GradientStop Color="#FF00003E" Offset="0.039" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <TextBox Margin="12,6,10,12" Name="tbxOut" Grid.Row="1" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.903" />
-                    <GradientStop Color="#FF00003E" Offset="0.032" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <Label Content="Separator" Grid.Column="1" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="9,6,0,0" Name="label1" VerticalAlignment="Top" Foreground="#FF0089FF" />
-        <TextBox Grid.Column="1" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="9,29,0,0" Name="tbxSeparator" VerticalAlignment="Top" Width="75" Text="'" TextAlignment="Center" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.735" />
-                    <GradientStop Color="#FF00003E" Offset="0.284" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <Label Content="After" Height="28" HorizontalAlignment="Left" Margin="9,58,0,0" Name="label2" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" />
-        <TextBox HorizontalAlignment="Left" Margin="11,97,0,0" Name="tbxAction" Width="75" Grid.Column="1" Grid.Row="1" Text="\n" TextAlignment="Center" Height="23" VerticalAlignment="Top" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.735" />
-                    <GradientStop Color="#FF00003E" Offset="0.284" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <Label Content="separation" Height="28" HorizontalAlignment="Left" Margin="9,73,0,0" Name="label3" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" />
-        <Label Content="Początek" Height="28" HorizontalAlignment="Left" Margin="90,6,0,0" Name="label4" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" />
-        <TextBox Height="23" HorizontalAlignment="Left" Margin="90,29,0,0" Name="tbxStart" Text="UNH" TextAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.735" />
-                    <GradientStop Color="#FF00003E" Offset="0.284" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <TextBox Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="92,97,0,0" Name="tbxEnd" Text="UNT" TextAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="1" Foreground="#FF0089FF" BorderBrush="#00007600">
-            <TextBox.Background>
-                <LinearGradientBrush EndPoint="1,0.5" StartPoint="0,0.5">
-                    <GradientStop Color="#FF5A5AD4" Offset="0" />
-                    <GradientStop Color="#FF5A5AD4" Offset="1" />
-                    <GradientStop Color="#FF00003E" Offset="0.735" />
-                    <GradientStop Color="#FF00003E" Offset="0.284" />
-                </LinearGradientBrush>
-            </TextBox.Background>
-        </TextBox>
-        <Label Content="Koniec" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="90,73,0,0" Name="label5" VerticalAlignment="Top" Grid.Column="1" Foreground="#FF0089FF" />
-        <Button Content="Ratować" Grid.Column="1" Height="23" HorizontalAlignment="Left" Margin="11,9,0,0" Name="btnRatowac" VerticalAlignment="Top" Width="154" Foreground="#FF00003E" BorderBrush="#0000900B" Click="btnRatowac_Click">
+        <TextBox Margin="12,12,10,3" Name="tbxIn" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <TextBox Margin="12,6,10,12" Name="tbxOut" Grid.Row="1" ScrollViewer.CanContentScroll="True" ScrollViewer.HorizontalScrollBarVisibility="Visible" ScrollViewer.VerticalScrollBarVisibility="Visible" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <Label Content="Separator" Grid.Column="1" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="11,29,0,0" Name="label1" VerticalAlignment="Top" Foreground="#FFC7C773" />
+        <TextBox Grid.Column="1" Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="11,52,0,0" Name="tbxSeparator" VerticalAlignment="Top" Width="75" Text="'" TextAlignment="Center" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <Label Content="After separator" Height="28" HorizontalAlignment="Left" Margin="88,29,0,0" Name="label2" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FFC7C773" />
+        <TextBox HorizontalAlignment="Left" Margin="92,52,0,0" Name="tbxAction" Width="75" Grid.Column="1" Grid.Row="1" Text="\n" TextAlignment="Center" Height="23" VerticalAlignment="Top" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <Label Content="Początek" HorizontalAlignment="Left" Margin="11,183,0,62" Name="label4" Grid.Column="1" Grid.Row="1" Foreground="#FFC7C773" />
+        <TextBox Height="23" HorizontalAlignment="Left" Margin="11,206,0,0" Name="tbxStart" Text="UNH" TextAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="1" Grid.Row="1" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <TextBox Grid.Row="1" Height="23" HorizontalAlignment="Left" Margin="92,206,0,0" Name="tbxEnd" Text="UNT" TextAlignment="Center" VerticalAlignment="Top" Width="75" Grid.Column="1" Foreground="#FFC7C773" BorderBrush="#00007600" Background="#FF1D1D1D"></TextBox>
+        <Label Content="Koniec" Grid.Row="1" Height="28" HorizontalAlignment="Left" Margin="90,182,0,0" Name="label5" VerticalAlignment="Top" Grid.Column="1" Foreground="#FFC7C773" />
+        <Button Content="Ratować" Grid.Column="1" Height="23" HorizontalAlignment="Left" Margin="11,9,0,0" Name="btnRatowac" VerticalAlignment="Top" Width="154" Foreground="#FFC7C773" BorderBrush="#0000900B" Click="btnRatowac_Click">
             <Button.Background>
-                <RadialGradientBrush>
-                    <GradientStop Color="#FF00003E" Offset="1" />
-                    <GradientStop Color="#FF5A5AD4" Offset="0.555" />
-                </RadialGradientBrush>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="#FF1D1D1D" Offset="0.245" />
+                    <GradientStop Color="#FFC7C773" Offset="0" />
+                </LinearGradientBrush>
             </Button.Background>
         </Button>
-        <CheckBox Content="Wytnij ::::::+" Grid.Column="1" Grid.Row="1" Height="16" HorizontalAlignment="Left" Margin="11,176,0,0" Name="chkbxCutEmpty" VerticalAlignment="Top" Foreground="#FF0089FF" BorderBrush="#0005890C">
+        <CheckBox Content="Wytnij puste pola" Grid.Column="1" Grid.Row="1" Height="16" HorizontalAlignment="Left" Margin="11,125,0,0" Name="chkbxCutEmpty" VerticalAlignment="Top" Foreground="#FFC7C773" BorderBrush="#0005890C">
             <CheckBox.Background>
                 <RadialGradientBrush>
-                    <GradientStop Color="#FF5A5AD4" Offset="0.671" />
-                    <GradientStop Color="#FF00003E" Offset="1" />
+                    <GradientStop Color="#FFC7C773" Offset="0.794" />
+                    <GradientStop Color="#FF2E2E2E" Offset="1" />
                 </RadialGradientBrush>
             </CheckBox.Background>
         </CheckBox>
-        <CheckBox Checked="chkbxSepare_Checked" Unchecked="chkbxSepare_Unchecked" Content="Separuj" Height="16" HorizontalAlignment="Left" Margin="11,132,0,0" Name="chkbxSepare" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" BorderBrush="#0005890C">
+        <CheckBox Checked="chkbxSepare_Checked" Unchecked="chkbxSepare_Unchecked" Content="Separuj" Height="16" HorizontalAlignment="Left" Margin="11,8,0,0" Name="chkbxSepare" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FFC7C773" BorderBrush="#0005890C">
             <CheckBox.Background>
                 <RadialGradientBrush>
-                    <GradientStop Color="#FF5A5AD4" Offset="0.671" />
-                    <GradientStop Color="#FF00003E" Offset="1" />
+                    <GradientStop Color="#FFC7C773" Offset="0.794" />
+                    <GradientStop Color="#FF2E2E2E" Offset="1" />
                 </RadialGradientBrush>
             </CheckBox.Background>
         </CheckBox>
-        <CheckBox Content="Wytnij środek dekumentu" Height="16" HorizontalAlignment="Left" Margin="11,198,0,0" Name="chkbxCutCenter" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FF0089FF" BorderBrush="#0005890C">
+        <CheckBox Content="Wytnij środek dekumentu" Checked="chkbxCutCenter_Checked" Unchecked="chkbxCutCenter_Unchecked" Height="16" HorizontalAlignment="Left" Margin="11,161,0,0" Name="chkbxCutCenter" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1" Foreground="#FFC7C773" BorderBrush="#0005890C">
             <CheckBox.Background>
                 <RadialGradientBrush>
-                    <GradientStop Color="#FF5A5AD4" Offset="0.671" />
-                    <GradientStop Color="#FF00003E" Offset="1" />
+                    <GradientStop Color="#FFC7C773" Offset="0.794" />
+                    <GradientStop Color="#FF2E2E2E" Offset="1" />
                 </RadialGradientBrush>
             </CheckBox.Background>
         </CheckBox>
-        <CheckBox Checked="chkbxCutCharacters_Checked" Unchecked="chkbxCutCharacters_Unchecked" BorderBrush="#0005890C" Content="Wytnij niedzowolone znaki" Foreground="#FF0089FF" Height="16" HorizontalAlignment="Left" Margin="11,154,0,0" Name="chkbxCutCharacters" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1">
+        <CheckBox Checked="chkbxCutCharacters_Checked" Unchecked="chkbxCutCharacters_Unchecked" BorderBrush="#0005890C" Content="Wytnij niedzowolone znaki" Foreground="#FFC7C773" Height="16" HorizontalAlignment="Left" Margin="11,103,0,0" Name="chkbxCutCharacters" VerticalAlignment="Top" Grid.Column="1" Grid.Row="1">
             <CheckBox.Background>
                 <RadialGradientBrush>
-                    <GradientStop Color="#FF5A5AD4" Offset="0.671" />
-                    <GradientStop Color="#FF00003E" Offset="1" />
+                    <GradientStop Color="#FFC7C773" Offset="0.794" />
+                    <GradientStop Color="#FF2E2E2E" Offset="1" />
                 </RadialGradientBrush>
             </CheckBox.Background>
         </CheckBox>
